syntax = "proto3";

package category;

service CategoryService {
    rpc CreateCategory (CreateCategoryRequest) returns (CategoryResponse);
    rpc GetCategories (GetCategoriesRequest) returns (GetCategoriesResponse);
    rpc GetCategory (GetCategoryRequest) returns (CategoryResponse);
    rpc UpdateCategory (UpdateCategoryRequest) returns (CategoryResponse);
    rpc DeleteCategory (DeleteCategoryRequest) returns (DeleteCategoryResponse);
}

message CreateCategoryRequest {
    string name = 1;
}

message GetCategoryRequest {
    int32 id = 1;
}

message GetCategoriesRequest {
}

message UpdateCategoryRequest {
    int32 id = 1;
    string name = 2;
}

message DeleteCategoryRequest {
    int32 id = 1;
}

message CategoryResponse {
    int32 id = 1;
    string name = 2;
}

message GetCategoriesResponse {
    repeated CategoryResponse categories = 1;
}

message DeleteCategoryResponse {
    bool success = 1;
}